--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,10 @@ doc_title: "M2 no-back driving data analysis"
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-  - "Gabriele Rodeghiero"
+  - "Gabriele Rodeghiero" 
+  - "Luca Rosignoli"
+  - "Enrico Giro" 
+  - "Rodolfo Canestrari"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
